@@ -299,6 +299,14 @@ public class MaterialMapStore {
         abilityBlackList.add("shulker_box");
         abilityBlackList.add("wall_sign"); //1.13 and lower?
         abilityBlackList.add("sign"); //1.13 and lower?
+        abilityBlackList.add("cartography_table");
+        abilityBlackList.add("grindstone");
+        abilityBlackList.add("lectern");
+        abilityBlackList.add("loom");
+        abilityBlackList.add("scaffolding");
+        abilityBlackList.add("smoker");
+        abilityBlackList.add("stonecutter");
+        abilityBlackList.add("sweet_berry_bush");
     }
     
     private void fillToolBlackList()
